2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* Makefile.am (RUNTEST, RUNTESTDEFAULTFLAGS): Remove.
	* Makefile.in: Regenerate.
	* testsuite/Makefile.am (CLEANFILES): Remove.
	(RUNTESTDEFAULTFLATS): Pass --srcdir and RUNTEST=$(RUNTEST).
	* testsuite/Makefile.in: Regenerate.
	
2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* lib/util-defs.exp: Move from here ..
	* testsuite/lib/util-defs.exp: .. to here.
	* Makefile.am (EXTRA_DIST): Remove lib/util-defs.exp.
	* Makefile.in: Regenerate.
	* testsuite/Makefile.am (EXTRA_DIST): Add lib/util-defs.exp.
	* testsuite/Makefile.in: Regenerate.
	* doc/ref.sgml (File Map): Remove util-defs.exp.
	* packaging/pkg/prototype: Update file list.

2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* NEWS: Document changes since 1.4.4.

2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* example/Makefile.am (check-recursive): Remove target.
	* example/Makefile.in: Regenerate.

2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* dejagnu.h: Conform with GNU coding standard.

2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* Makefile.am (PKGING): Remove.
	(PACKAGING_METAFILES): Update accordingly.
	(CLEANFILES, check-DEJAGNU): Remove.
	(tarball): Remove; use `dist'.
	(deb): Update target recipe to use `make dist'.

2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* Clean.tcl: Remove.

	* Makefile.am (SUBDIRS): Add testsuite, example directories.
	(EXTRA_DIST): Define.
	(pkgdata_SCRIPTS): Add lib/*.exp files.
	(DATE, TCLSH): Remove.
	(configdir, config_DATA, config_SCRIPTS): Define.
	(baseboarddir, baseboard_DATA, baseboard_SCRIPTS): Likewise.
	(pkgdata_DATA): Likewise.
	(djlibexecdir, djlibexec_SCRIPTS): Likewise.
	(PKGING, PACKAGING_METAFILES): New macros.
	(clean-local): Remove.
	(rpm): Depend on dist.
	(deb): Likewise.
	(dist-hook): Remove.
	(lib_dest, lib_files): Likewise.
	(baseboard_dest, baseboard_files): Likewise.
	(include_dest, config_dest, config_files): Likewise.
	(install-data-local): Likewise.